test/tests/ChoiceMismatch.expected
ChoiceMismatch.panda:12:36: error: '=' cannot operate on 'anonymous.A', 'anonymous.B'
1 error
