test/tests/ChoiceMismatch.panda
choice A {
    FOO
}

choice B {
    BAR
}

class ChoiceMismatch {
    @class
    method main() {
        Console.printLine(A.FOO = B.BAR)
    }
}